deployment/k8s/production/app-admin/main.production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: $SERVICE_NAME
  template:
    metadata:
      name: $SERVICE_NAME
      labels:
        name: $SERVICE_NAME
    spec:
      containers:
        - name: $SERVICE_NAME
          image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$PREFIX-$IMAGE_TAG
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80

  selector:
    name: $SERVICE_NAME
  type: ClusterIP


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: yody-production
    alb.ingress.kubernetes.io/subnets: subnet-0e49829934eed3531, subnet-023f192e8f2345e26, subnet-069314e3baa86d99d
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:973134007751:certificate/6ec3f5c4-11a5-4446-bc4c-69d63878ec25
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: $SERVICE_NAME
  namespace: $NAMESPACE
spec:
  rules:
  - host: $HOST
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: $SERVICE_NAME
            port:
              number: 80
        path: $SERVICE_PATH*
        pathType: ImplementationSpecific
